--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
 
   <!-- Bootstrap Core CSS -->
-  <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  <!-- Custom CSS -->
   <link href="./assets/css/style.css" rel="stylesheet">
 
   <!-- You can change the theme colors from here -->
